Fix: Add ranking.js and update ranking.html

--- a/ranking.html
+++ b/ranking.html
@@ -20,10 +20,11 @@
     </header>
     <main>
         <h2>ランキングページ</h2>
-        <p>ランキングデータを表示します。</p>
+        <div id="rankingData">ランキングデータを表示します。</div>
     </main>
     <footer>
         <p><a href="#">お問い合わせ</a> | <a href="#">サイトについて</a></p>
     </footer>
+    <script src="ranking.js"></script>
 </body>
 </html>
