Add: New posts and ranking preview on home page

--- a/home.html
+++ b/home.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>ホーム - エリア選択機能</title>
+    <title>ホーム - 新着投稿とランキングプレビュー</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
@@ -33,6 +33,16 @@
             </select>
             <button id="goToArea">決定</button>
         </div>
+
+        <section id="newPosts">
+            <h2>新着投稿</h2>
+            <div id="newPostsContainer"></div>
+        </section>
+
+        <section id="rankingPreview">
+            <h2>ランキングトップ3</h2>
+            <div id="rankingContainer"></div>
+        </section>
     </main>
 
     <footer>
