Fix: Add ranking update button and functionality

--- a/home.html
+++ b/home.html
@@ -42,6 +42,7 @@
         <section id="rankingPreview">
             <h2>ランキングトップ3</h2>
             <div id="rankingContainer"></div>
+            <button id="updateRankingButton">ランキングを更新</button>
         </section>
     </main>
 
