--- a/home.html
+++ b/home.html
@@ -17,6 +17,10 @@
                 <li><a href="mypage.html">マイページ</a></li>
             </ul>
         </nav>
+        <select id="languageSelect">
+            <option value="ja">日本語</option>
+            <option value="en">English</option>
+        </select>
     </header>
 
     <main>
