--- a/home.html
+++ b/home.html
@@ -3,55 +3,61 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title id="pageTitle">ホーム - 新着投稿とランキングプレビュー</title>
+    <title>ホーム - 新着投稿とランキングプレビュー</title>
     <link rel="stylesheet" href="style.css">
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&family=Noto+Sans+JP:wght@400;700&display=swap" rel="stylesheet">
 </head>
 <body>
-    <header>
-        <h1 id="pageTitle">サイトタイトル</h1>
-        <nav>
-            <ul>
-                <li><a href="home.html" id="homeLink">ホーム</a></li>
-                <li><a href="post.html" id="postLink">投稿</a></li>
-                <li><a href="ranking.html" id="rankingLink">ランキング</a></li>
-                <li><a href="mypage.html" id="mypageLink">マイページ</a></li>
-            </ul>
-        </nav>
-        <select id="languageSelect">
-            <option value="ja">日本語</option>
-            <option value="en">English</option>
-        </select>
+    <header class="site-header">
+        <div class="container">
+            <h1 class="site-title">サイトタイトル</h1>
+            <nav class="navigation">
+                <ul>
+                    <li><a href="home.html">ホーム</a></li>
+                    <li><a href="post.html">投稿</a></li>
+                    <li><a href="ranking.html">ランキング</a></li>
+                    <li><a href="mypage.html">マイページ</a></li>
+                </ul>
+            </nav>
+            <select id="languageSelect" class="language-select">
+                <option value="ja">日本語</option>
+                <option value="en">English</option>
+            </select>
+        </div>
     </header>
 
-    <main>
-        <h2 id="areaSelectionTitle">エリアを選んで探そう！</h2>
-        <div id="area-selection">
-            <label for="area" id="areaLabel">エリアを選択：</label>
-            <select id="area" name="area">
-                <option value="">選択してください</option>
-                <option value="tokyo">東京</option>
-                <option value="osaka">大阪</option>
-                <option value="kyoto">京都</option>
-                <option value="hokkaido">北海道</option>
-                <option value="fukuoka">福岡</option>
-            </select>
-            <button id="goToArea">決定</button>
-        </div>
-
-        <section id="newPosts">
-            <h2 id="newPostsLabel">新着投稿</h2>
-            <div id="newPostsContainer"></div>
+    <main class="site-main">
+        <section class="area-selection">
+            <h2>エリアを選んで探そう！</h2>
+            <div>
+                <label for="area">エリアを選択：</label>
+                <select id="area" name="area">
+                    <option value="">選択してください</option>
+                    <option value="tokyo">東京</option>
+                    <option value="osaka">大阪</option>
+                    <option value="kyoto">京都</option>
+                    <option value="hokkaido">北海道</option>
+                    <option value="fukuoka">福岡</option>
+                </select>
+                <button id="goToArea" class="btn-primary">決定</button>
+            </div>
         </section>
 
-        <section id="rankingPreview">
-            <h2 id="rankingLabel">ランキングトップ3</h2>
-            <div id="rankingContainer"></div>
-            <button id="updateRankingButton">ランキングを更新</button>
+        <section class="new-posts">
+            <h2>新着投稿</h2>
+            <div id="newPostsContainer" class="card-container"></div>
+        </section>
+
+        <section class="ranking-preview">
+            <h2>ランキングトップ3</h2>
+            <div id="rankingContainer" class="card-container"></div>
         </section>
     </main>
 
-    <footer>
-        <p><a href="#" id="contactLink">お問い合わせ</a> | <a href="#" id="aboutLink">サイトについて</a></p>
+    <footer class="site-footer">
+        <div class="container">
+            <p><a href="#">お問い合わせ</a> | <a href="#">サイトについて</a></p>
+        </div>
     </footer>
     <script src="home.js"></script>
 </body>
