--- a/home.html
+++ b/home.html
@@ -8,6 +8,16 @@
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&family=Noto+Sans+JP:wght@400;700&display=swap" rel="stylesheet">
 </head>
 <body>
+    <!-- 言語選択ポップアップ -->
+    <div id="languageModal" class="modal">
+        <div class="modal-content">
+            <h2>Please select your language</h2>
+            <button class="btn-language" data-lang="ja">日本語</button>
+            <button class="btn-language" data-lang="en">English</button>
+        </div>
+    </div>
+
+    <!-- ヘッダー -->
     <header class="site-header">
         <div class="container">
             <h1 class="site-title">サイトタイトル</h1>
@@ -19,13 +29,10 @@
                     <li><a href="mypage.html">マイページ</a></li>
                 </ul>
             </nav>
-            <select id="languageSelect" class="language-select">
-                <option value="ja">日本語</option>
-                <option value="en">English</option>
-            </select>
         </div>
     </header>
 
+    <!-- メインコンテンツ -->
     <main class="site-main">
         <section class="area-selection">
             <h2>エリアを選択してください</h2>
@@ -37,18 +44,15 @@
                 <button class="btn-area" data-area="fukuoka">福岡</button>
             </div>
         </section>
-
-        <section class="review-link">
-            <h2>レビューを書く</h2>
-            <button id="writeReviewButton" class="btn-primary">投稿ページへ</button>
-        </section>
     </main>
 
+    <!-- フッター -->
     <footer class="site-footer">
         <div class="container">
             <p><a href="#">お問い合わせ</a> | <a href="#">サイトについて</a></p>
         </div>
     </footer>
+
     <script src="home.js"></script>
 </body>
 </html>
