--- a/home.html
+++ b/home.html
@@ -23,25 +23,30 @@
             <h1 class="site-title">サイトタイトル</h1>
             <nav class="navigation">
                 <ul>
-                    <li><a href="home.html">ホーム</a></li>
-                    <li><a href="post.html">投稿</a></li>
-                    <li><a href="ranking.html">ランキング</a></li>
-                    <li><a href="mypage.html">マイページ</a></li>
+                    <li><a href="home.html" id="homeLink">ホーム</a></li>
+                    <li><a href="post.html" id="postLink">投稿</a></li>
+                    <li><a href="ranking.html" id="rankingLink">ランキング</a></li>
+                    <li><a href="mypage.html" id="mypageLink">マイページ</a></li>
                 </ul>
             </nav>
+            <!-- ヘッダーの言語切り替えセレクター -->
+            <select id="headerLanguageSelect">
+                <option value="ja">日本語</option>
+                <option value="en">English</option>
+            </select>
         </div>
     </header>
 
     <!-- メインコンテンツ -->
     <main class="site-main">
         <section class="area-selection">
-            <h2>エリアを選択してください</h2>
+            <h2 id="areaSelectionTitle">エリアを選択してください</h2>
             <div class="area-buttons">
-                <button class="btn-area" data-area="tokyo">東京</button>
-                <button class="btn-area" data-area="osaka">大阪</button>
-                <button class="btn-area" data-area="kyoto">京都</button>
-                <button class="btn-area" data-area="hokkaido">北海道</button>
-                <button class="btn-area" data-area="fukuoka">福岡</button>
+                <button class="btn-area" id="tokyoButton">東京</button>
+                <button class="btn-area" id="osakaButton">大阪</button>
+                <button class="btn-area" id="kyotoButton">京都</button>
+                <button class="btn-area" id="hokkaidoButton">北海道</button>
+                <button class="btn-area" id="fukuokaButton">福岡</button>
             </div>
         </section>
     </main>
@@ -49,7 +54,7 @@
     <!-- フッター -->
     <footer class="site-footer">
         <div class="container">
-            <p><a href="#">お問い合わせ</a> | <a href="#">サイトについて</a></p>
+            <p><a href="#" id="contactLink">お問い合わせ</a> | <a href="#" id="aboutLink">サイトについて</a></p>
         </div>
     </footer>
 
