Fix: Update homepage design and layout

--- a/home.html
+++ b/home.html
@@ -44,6 +44,7 @@
             <div class="area-dropdown">
                 <label for="areaSelect" id="areaLabel">エリアを選択：</label>
                 <select id="areaSelect">
+                    <option value="" disabled selected>エリアを選択...</option>
                     <option value="tokyo" id="tokyoOption">東京</option>
                     <option value="osaka" id="osakaOption">大阪</option>
                     <option value="kyoto" id="kyotoOption">京都</option>
@@ -52,7 +53,7 @@
                 </select>
                 <button id="goToArea">決定</button>
             </div>
-        </section>
+        </section>        
     </main>
 
     <!-- フッター -->
