Fix: Update homepage design and layout

--- a/home.html
+++ b/home.html
@@ -27,13 +27,17 @@
                     <li><a href="post.html" id="postLink">投稿</a></li>
                     <li><a href="ranking.html" id="rankingLink">ランキング</a></li>
                     <li><a href="mypage.html" id="mypageLink">マイページ</a></li>
+                    <li><a href="review.html" id="reviewLink">レビュー記入</a></li>
                 </ul>
             </nav>
             <!-- ヘッダーの言語切り替え -->
-            <select id="headerLanguageSelect">
-                <option value="ja">日本語</option>
-                <option value="en">English</option>
-            </select>
+            <div class="language-switcher">
+                <label for="headerLanguageSelect">Language:</label>
+                <select id="headerLanguageSelect">
+                    <option value="ja">日本語</option>
+                    <option value="en">English</option>
+                </select>
+            </div>
         </div>
     </header>
 
