Fix: Update homepage design and layout

--- a/home.html
+++ b/home.html
@@ -29,14 +29,6 @@
                     <li><a href="mypage.html" id="mypageLink">マイページ</a></li>
                 </ul>
             </nav>
-            <!-- ヘッダーの言語切り替え -->
-            <div class="language-switcher">
-                <label for="headerLanguageSelect">Language:</label>
-                <select id="headerLanguageSelect">
-                    <option value="ja">日本語</option>
-                    <option value="en">English</option>
-                </select>
-            </div>
         </div>
     </header>
 
@@ -44,7 +36,7 @@
     <main class="site-main">
         <!-- エリア選択 -->
         <section class="area-selection">
-            <h2 id="areaSelectionTitle">エリアを選択してください</h2>
+            <h2 id="areaSelectionTitle">旅行先を選ぼう！</h2>
             <div class="area-dropdown">
                 <label for="areaSelect" id="areaLabel">エリアを選択：</label>
                 <select id="areaSelect">
@@ -57,12 +49,14 @@
                 </select>
                 <button id="goToArea">決定</button>
             </div>
-        </section>  
+        </section>
 
-        <!-- レビュー投稿 -->
+        <!-- 区切り線 -->
+        <div class="section-divider"></div>
+
+        <!-- レビュー投稿ボタン -->
         <section class="review-post">
-            <h2 id="reviewPostTitle">レビューを投稿しよう！</h2>
-            <a href="review.html" id="reviewPostButton" class="btn-review">レビュー投稿ページへ</a>
+            <a href="review.html" class="btn-review">レビュー投稿ページはこちら</a>
         </section>
     </main>
 
