--- a/home.html
+++ b/home.html
@@ -29,6 +29,11 @@
                     <li><a href="mypage.html" id="mypageLink">マイページ</a></li>
                 </ul>
             </nav>
+            <!-- ヘッダーの言語切り替え -->
+            <select id="headerLanguageSelect">
+                <option value="ja">日本語</option>
+                <option value="en">English</option>
+            </select>
         </div>
     </header>
 
