Fix: Update homepage design and layout

--- a/home.html
+++ b/home.html
@@ -45,7 +45,7 @@
             <div class="area-dropdown">
                 <label for="areaSelect" id="areaLabel">エリアを選択：</label>
                 <select id="areaSelect">
-                    <option value="" disabled selected>エリアを選択...</option>
+                    <option value="" disabled selected id="areaPlaceholder">エリアを選択...</option>
                     <option value="tokyo" id="tokyoOption">東京</option>
                     <option value="osaka" id="osakaOption">大阪</option>
                     <option value="kyoto" id="kyotoOption">京都</option>
@@ -61,7 +61,7 @@
 
         <!-- レビュー投稿ボタン -->
         <section class="review-post">
-            <a href="review.html" class="btn-review">レビュー投稿ページはこちら</a>
+            <a href="review.html" class="btn-review" id="reviewPostButton">レビュー投稿ページはこちら</a>
         </section>
     </main>
 
