Fix: Update homepage design and layout

--- a/home.html
+++ b/home.html
@@ -54,6 +54,20 @@
                 </select>
                 <button id="goToArea">決定</button>
             </div>
+            <!-- 詳細エリア選択 -->
+            <div id="detailAreaContainer" class="area-dropdown" style="display: none;">
+                <label for="regionSelect">地域を選択：</label>
+                <select id="regionSelect">
+                    <option value="" disabled selected>地域を選択...</option>
+                </select>
+
+                <label for="subRegionSelect" style="display: none;">詳細エリアを選択：</label>
+                <select id="subRegionSelect" style="display: none;">
+                    <option value="" disabled selected>詳細エリアを選択...</option>
+                </select>
+
+                <button id="confirmAreaButton">決定</button>
+            </div>
         </section>
 
         <!-- 区切り線 -->
