Fix: Update homepage design and layout

--- a/home.html
+++ b/home.html
@@ -3,23 +3,15 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>エリア選択</title>
+    <title>ホーム</title>
     <link rel="stylesheet" href="style.css">
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&family=Noto+Sans+JP:wght@400;700&display=swap" rel="stylesheet">
 </head>
 <body>
-    <!-- 言語選択ポップアップ -->
-    <div id="languageModal" class="modal">
-        <div class="modal-content">
-            <h2>Please select your language</h2>
-            <button class="btn-language" data-lang="ja">日本語</button>
-            <button class="btn-language" data-lang="en">English</button>
-        </div>
-    </div>
-
     <!-- ヘッダー -->
     <header class="site-header">
         <div class="container">
-            <h1 class="site-title">エリア選択</h1>
+            <h1 class="site-title">サイトタイトル</h1>
             <nav class="navigation">
                 <ul>
                     <li><a href="home.html" id="homeLink">ホーム</a></li>
@@ -28,6 +20,7 @@
                     <li><a href="mypage.html" id="mypageLink">マイページ</a></li>
                 </ul>
             </nav>
+            <!-- 言語切替セレクター -->
             <select id="headerLanguageSelect">
                 <option value="ja">日本語</option>
                 <option value="en">English</option>
@@ -37,6 +30,7 @@
 
     <!-- メインコンテンツ -->
     <main class="site-main">
+        <!-- 閲覧者向け部分 -->
         <section class="area-selection">
             <h2 id="areaSelectionTitle">旅行先を選ぼう！</h2>
             <div class="area-dropdown">
@@ -50,20 +44,34 @@
                     <option value="fukuoka" id="fukuokaOption">福岡</option>
                 </select>
             </div>
-            <div id="detailAreaContainer" style="display: none;">
+
+            <div id="detailAreaContainer" class="area-dropdown" style="display: none;">
                 <label for="regionSelect" id="regionLabel">地域を選択：</label>
-                <select id="regionSelect">
-                    <option value="" disabled selected>地域を選択...</option>
-                </select>
+                <select id="regionSelect"></select>
+
                 <label for="subRegionSelect" id="subRegionLabel">詳細エリアを選択：</label>
-                <select id="subRegionSelect">
-                    <option value="" disabled selected>詳細エリアを選択...</option>
-                </select>
+                <select id="subRegionSelect" style="display: none;"></select>
+
+                <button id="confirmAreaButton">決定</button>
             </div>
-            <button id="confirmAreaButton">決定</button>
+        </section>
+
+        <!-- 区切り線 -->
+        <div class="section-divider"></div>
+
+        <!-- 投稿者向け部分 -->
+        <section class="review-post">
+            <a href="review.html" class="btn-review" id="reviewPostButton">レビュー投稿ページはこちら</a>
         </section>
     </main>
 
-    <script src="app.js"></script>
+    <!-- フッター -->
+    <footer class="site-footer">
+        <div class="container">
+            <p><a href="#" id="contactLink">お問い合わせ</a> | <a href="#" id="aboutLink">サイトについて</a></p>
+        </div>
+    </footer>
+
+    <script src="home.js"></script>
 </body>
 </html>
