Fix: Update homepage design and layout

--- a/home.html
+++ b/home.html
@@ -61,7 +61,8 @@
 
         <!-- 投稿者向け部分 -->
         <section class="review-post">
-            <a href="review.html" class="btn-review" id="reviewPostButton">レビュー投稿ページはこちら</a>
+            <!-- ここを review.html から post.html に修正 -->
+            <a href="post.html" class="btn-review" id="reviewPostButton">レビュー投稿ページはこちら</a>
         </section>
     </main>
 
