Fix: Update homepage design and layout

--- a/home.html
+++ b/home.html
@@ -36,7 +36,7 @@
 
             <!-- 第1階層: エリア選択 -->
             <div class="area-dropdown">
-                <label for="areaSelect" id="areaLabel">エリアを選択:</label>
+                <label for="areaSelect" id="areaLabel">エリアを選択：</label>
                 <select id="areaSelect">
                     <option value="" disabled selected id="areaPlaceholder">エリアを選択...</option>
                     <option value="tokyo">東京</option>
@@ -51,7 +51,7 @@
             <div id="detailAreaContainer" class="area-dropdown" style="display: none;">
                 <!-- 第2階層: 地域選択 -->
                 <div class="dropdown-row" id="regionContainer" style="display: none;">
-                    <label for="regionSelect" id="regionLabel">地域を選択:</label>
+                    <label for="regionSelect" id="regionLabel">地域を選択：</label>
                     <select id="regionSelect">
                         <option value="" disabled selected>地域を選択...</option>
                     </select>
@@ -59,7 +59,7 @@
 
                 <!-- 第3階層: 詳細エリア選択 -->
                 <div class="dropdown-row" id="subRegionContainer" style="display: none;">
-                    <label for="subRegionSelect" id="subRegionLabel">詳細エリアを選択:</label>
+                    <label for="subRegionSelect" id="subRegionLabel">詳細エリアを選択：</label>
                     <select id="subRegionSelect">
                         <option value="" disabled selected>詳細エリアを選択...</option>
                     </select>
@@ -67,7 +67,7 @@
 
                 <!-- 第4階層: 名物グルメ選択 -->
                 <div class="dropdown-row" id="gourmetContainer" style="display: none;">
-                    <label for="gourmetSelect" id="gourmetLabel">名物グルメを選択:</label>
+                    <label for="gourmetSelect" id="gourmetLabel">名物グルメを選択：</label>
                     <select id="gourmetSelect">
                         <option value="" disabled selected>名物グルメを選択...</option>
                     </select>
